<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright (c) 2012-2024 Savoir Technologies, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">


    <modelVersion>4.0.0</modelVersion>
    <groupId>com.savoir.modulith</groupId>
    <artifactId>modulith</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <name>Modulith-Demo</name>
    <description>Modulith Architecture Demo</description>
    <url>https://www.savoirtech.com/</url>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <commons-lang3.version>3.4</commons-lang3.version>
        <cxf.version>3.5.5</cxf.version>
        <guava.version>18.0</guava.version>
        <jackson.version>2.18.0</jackson.version>
        <jettison.version>1.3.7</jettison.version>
        <slf4j-api.version>1.7.32</slf4j-api.version>

        <maven.bundle.plugin.version>5.1.6</maven.bundle.plugin.version>
    </properties>

    <modules>
        <!-- Common Models -->
        <module>models</module>
        <!-- Common Services -->
        <module>services</module>

        <!-- Game API and Impl -->
        <module>game</module>

        <!-- Game home page and services. -->
        <module>home</module>

        <!-- Admin home page and services. -->
        <module>admin</module>

        <!-- Apache Karaf Features Descriptor -->
        <module>features</module>
    </modules>

    <pluginRepositories>
        <!-- Apache snapshots -->
        <pluginRepository>
            <id>apache-snapshots</id>
            <name>Apache Snapshots Repository</name>
            <url>https://repository.apache.org/content/groups/snapshots-group</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <maxmem>256M</maxmem>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <maxmem>512M</maxmem>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.5.3,4)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java9-plus</id>
            <properties>
                <surefire.argLine>
                    --add-opens java.base/java.security=ALL-UNNAMED
                    --add-opens java.base/java.net=ALL-UNNAMED
                    --add-opens java.base/java.lang=ALL-UNNAMED
                    --add-opens java.base/java.util=ALL-UNNAMED
                    --add-opens java.naming/javax.naming.spi=ALL-UNNAMED
                    --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED
                </surefire.argLine>
            </properties>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
        </profile>
    </profiles>

</project>
